<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_action"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/favorite_action"
        android:title="@string/favorites"
        android:icon="@drawable/ic_baseline_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings_action"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings"
        app:showAsAction="ifRoom" />
</menu>