...
            <TextView
                style="@style/TextSetting.Subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/switch_dark_mode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/CustomSwitch"
                android:id="@+id/switch_dark_mode"
                android:layout_width="0dp"
...
